@@ -18,7 +18,7 @@
 # Copyright (c) 2003 Pat Thoyts
 #
 #-------------------------------------------------------------------------
-# RCS: @(#)$Id: makefile.vc,v 1.1 2004/12/17 16:02:05 patthoyts Exp $
+# RCS: @(#)$Id: makefile.vc,v 1.2 2005/01/14 16:07:11 patthoyts Exp $
 #-------------------------------------------------------------------------
 
 !if !defined(MSDEVDIR) && !defined(MSVCDIR) && !defined(VCToolkitInstallDir)
@@ -302,7 +302,7 @@ lflags	= $(lflags) -ws:aggressive
 dlllflags = $(lflags) -dll
 conlflags = $(lflags) -subsystem:console
 guilflags = $(lflags) -subsystem:windows
-baselibs  = $(TCLSTUBLIB) $(SSL_LIBS) ws2_32.lib gdi32.lib
+baselibs  = $(TCLSTUBLIB) $(SSL_LIBS) ws2_32.lib user32.lib gdi32.lib advapi32.lib
 
 #---------------------------------------------------------------------
 # TclTest flags
@@ -351,8 +351,9 @@ setup:
 	@if not exist $(OUT_DIR)\nul mkdir $(OUT_DIR)
 	@if not exist $(TMP_DIR)\nul mkdir $(TMP_DIR)
 
+# See <tcl>/win/coffbase.txt for extension base addresses.
 $(PRJLIB): $(DLLOBJS)
-	$(link32) $(dlllflags) -out:$@ $(baselibs) @<<
+	$(link32) $(dlllflags) -base:0x10780000 -out:$@ $(baselibs) @<<
 $**
 <<
 	-@del $*.exp
